Added navigation and control bar.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 <body>
 	<h1>AfTeRsHoX Member Equipment Check</h1>
 	<p id="status">Initializing...</p>
-	<section id="controls">
-		<input type="checkbox" id="hide-offline" /> Hide Offline
-	</section>
+	<nav>
+		<ul>
+			<li class="sup">
+				<input type="checkbox" id="hide-offline" /> <label for="hide-offline">Hide Offline</label>
+			</li>
+		</ul>
+	</nav>
 	<table id="members"></table>
 </body>
 </html>
