Completely redesigned site and user interface.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="utf-8" />
-	<title>AfTeRsHoX Member Equipment Check</title>
+	<title>AFX Member Equipment Check</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
+	<link rel="stylesheet" type="text/css" href="css/membertable.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<script type="text/javascript" src="js/eventemitter.js"></script>
 	<script type="text/javascript" src="js/memberloader.js"></script>
@@ -14,7 +16,9 @@
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-	<h1>AfTeRsHoX Member Equipment Check</h1>
+	<h1>
+		<img src="img/logo-text.png" width="405" height="172" alt="AfTeRsHoX Member Equipment Check" />
+	</h1>
 	<p id="status">Initializing...</p>
 	<nav>
 		<ul>
