Redesigned status information display.
The status text is now show in a separate box in the top of the window.
Also added some visual flair (slide down/up and spinner) to fit the new
page design.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>AFX Member Equipment Check</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/statusbox.css" />
 	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/membertable.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -19,7 +20,10 @@
 	<h1>
 		<img src="img/logo-text.png" width="405" height="172" alt="AfTeRsHoX Member Equipment Check" />
 	</h1>
-	<p id="status">Initializing...</p>
+	<div id="status">
+		<div></div>
+		<span>Initializing...</span>
+	</div>
 	<nav>
 		<ul>
 			<li class="sup">
