Refactored equipment rules to be less scripted.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="js/items.js"></script>
 	<script type="text/javascript" src="js/characteritems.js"></script>
 	<script type="text/javascript" src="js/qualifications.js"></script>
+	<script type="text/javascript" src="js/equipmentrequirements.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
