--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="utf-8" />
+	<meta name="robots" content="noindex, nofollow, noarchive" />
 	<title>AFX Member Equipment Check</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/statusbox.css" />
