--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="css/membertable.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 	<script type="text/javascript" src="js/eventemitter.js"></script>
+	<script type="text/javascript" src="js/character.js"></script>
 	<script type="text/javascript" src="js/memberloader.js"></script>
 	<script type="text/javascript" src="js/membertablebuilder.js"></script>
 	<script type="text/javascript" src="js/items.js"></script>
-	<script type="text/javascript" src="js/characteritems.js"></script>
+	<script type="text/javascript" src="js/skills.js"></script>
 	<script type="text/javascript" src="js/qualifications.js"></script>
-	<script type="text/javascript" src="js/equipmentrequirements.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
