--- a/index.html
+++ b/index.html
@@ -3,34 +3,63 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noindex, nofollow, noarchive" />
+	<meta name="viewport" content="width=1300" />
 	<title>AFX Member Equipment Check</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
-	<link rel="stylesheet" type="text/css" href="css/statusbox.css" />
-	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
-	<link rel="stylesheet" type="text/css" href="css/membertable.css" />
+
+	<!-- Import Libraries -->
+	<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/jquery-powertip/1.2.0/css/jquery.powertip.min.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/eventemitter.js"></script>
-	<script type="text/javascript" src="js/character.js"></script>
-	<script type="text/javascript" src="js/memberloader.js"></script>
-	<script type="text/javascript" src="js/membertablebuilder.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-powertip/1.2.0/jquery.powertip.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.2/typeahead.jquery.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
+
+	<!-- Import CSS -->
+	<!-- begin-stylesheets -->
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/searchform.css" />
+	<link rel="stylesheet" type="text/css" href="css/memberreport.css" />
+	<link rel="stylesheet" type="text/css" href="css/membertree.css" />
+	<!-- end-stylesheets -->
+
+	<!-- Import JavaScript -->
+	<!-- begin-scripts -->
 	<script type="text/javascript" src="js/qualifications.js"></script>
+	<script type="text/javascript" src="js/service.js"></script>
+	<script type="text/javascript" src="js/character.js"></script>
+	<script type="text/javascript" src="js/itemloader.js"></script>
+	<script type="text/javascript" src="js/outfitloader.js"></script>
+	<script type="text/javascript" src="js/memberloader.js"></script>
+	<script type="text/javascript" src="js/memberreportbuilder.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+	<!-- end-scripts -->
 </head>
 <body>
 	<h1>
 		<img src="img/logo-text.png" width="396" height="172" alt="AfTeRsHoX Member Equipment Check" />
 	</h1>
-	<div id="status">
-		<div></div>
-		<span>Initializing...</span>
-	</div>
-	<nav>
-		<ul>
-			<li class="sup">
-				<input type="checkbox" id="hide-offline" /> <label for="hide-offline">Hide Offline</label>
+	<form id="character-search">
+		<input type="text" size="24" maxlength="24" id="character-name" placeholder="Enter character name..." />
+		<input type="submit" id="search-button" value="Check Certifications" />
+	</form>
+	<section id="member-report">
+		<h2></h2>
+		<ul id="member-details"></ul>
+		<ul id="legend">
+			<li data-powertip="Have all of the certification, equipment, and prerequisites requred.">
+				<span class="pass"></span> Complete
+			</li>
+			<li data-powertip="Completed the prerequisites, but have not completed this item.">
+				<span class="fail"></span> In Progress
+			</li>
+			<li data-powertip="Have not completed the prerequisites required to unlock this item.">
+				<span class="fail na"></span> Not Available
 			</li>
 		</ul>
-	</nav>
-	<table id="members"></table>
+		<section id="member-tree"></section>
+		<p>
+			<strong>Reminder:</strong> This page just checks what ranks a character is qualified for with their current certifications and equipment.<br />
+			To get promoted to a new rank the player must still complete any required applications and training.
+		</p>
+	</section>
 </body>
 </html>
